--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,115 @@
-.topnav {
-    background-color: #333;
-    overflow: hidden;
+*{
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+
+body{
+  font-family: montserrat;
+}
+
+/* ---------------------------------nav css----------------------------------- */
+
+nav{
+  background: black;
+  height: 80px;
+  width: 100%;
+}
+label.logo{
+  color: white;
+  font-weight: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+
+}
+
+nav ul{
+  float: right;
+  margin-right: 20px;
+}
+
+nav ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+
+nav ul li a{
+  color: white;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 5px;
+  text-transform: uppercase;
+
+}
+
+a.active,a:hover{
+  background: blue;
+  transition: .5s;
+}
+
+.chackbtn{
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  display: none;
+}
+
+#chack{
+  display: none;
+
+}
+
+@media (max-width: 952px){
+  label.logo{
+    font-size: 30px;
+    padding-left: 50px;
   }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
+  nav ul li a{
+    font-size: 10px;
+  }
+}
+@media (max-width: 858px){
+  .chackbtn{
+    display: block;
+  }
+  ul{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #2c3e50;
+    top: 80px;
+    left: -100%;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+    transition: all .5s;
   }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+  nav ul li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
   }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
+
+  nav ul li a{
+    font-size: 20px;
   }
+  a:hover,a.active{
+    background: none;
+    color: #0082e6;
+
+  }
+  #chack:checked ~ ul{
+    left: 0;
+  }
+}
+
+section{
+  background: url(/img/background.jpg) no-repeat;
+  background-size: cover;
+  height: calc(100vh - 80px);
+}
+/* ---------------------------------nav css----------------------------------- */
