--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
 /* ---------------------------------nav css----------------------------------- */
 
 nav{
-  background: black;
+  background: #040D12;
   height: 80px;
   width: 100%;
 }
@@ -21,8 +21,9 @@ label.logo{
   color: white;
   font-weight: 35px;
   line-height: 80px;
-  padding: 0 100px;
+  padding: 0 70px;
   font-weight: bold;
+  font-size: 25px;
 
 }
 
@@ -39,7 +40,7 @@ nav ul li{
 
 nav ul li a{
   color: white;
-  font-size: 17px;
+  font-size: 15px;
   padding: 7px 13px;
   border-radius: 5px;
   text-transform: uppercase;
@@ -47,7 +48,7 @@ nav ul li a{
 }
 
 a.active,a:hover{
-  background: blue;
+  background: #183D3D;
   transition: .5s;
 }
 
@@ -67,7 +68,7 @@ a.active,a:hover{
 
 @media (max-width: 952px){
   label.logo{
-    font-size: 30px;
+    font-size: 20px;
     padding-left: 50px;
   }
   nav ul li a{
@@ -82,7 +83,7 @@ a.active,a:hover{
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #2c3e50;
+    background: #040D12;
     top: 80px;
     left: -100%;
     text-align: center;
@@ -97,11 +98,6 @@ a.active,a:hover{
   nav ul li a{
     font-size: 20px;
   }
-  a:hover,a.active{
-    background: none;
-    color: #0082e6;
-
-  }
   #chack:checked ~ ul{
     left: 0;
   }
@@ -111,7 +107,7 @@ a.active,a:hover{
 /* ---------------------------------nav css----------------------------------- */
 
 section{
-  background: URL(/img/backimg11.jpg) no-repeat;
+  background-color: #183D3D;
   background-size: cover;
   height: calc(100vh - 80px);
 }
