--- a/css/style.css
+++ b/css/style.css
@@ -224,24 +224,22 @@ bio,h1{
   
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
+  background-color: #ddd;
+  margin: 15%;
   
 }
 
 #table td, #table th {
-  border: 1px solid #ddd;
+  border: 2px solid #000000;
   padding: 8px;
 }
-
-#table tr:nth-child(even){background-color: #f2f2f2;}
-
-#table tr:hover {background-color: #ddd;}
-
 #table th {
   padding-top: 12px;
   padding-bottom: 12px;
-  text-align: left;
+  text-align: center;
   background-color: #04AA6D;
   color: white;
+  font-weight: 1000;
 }
 
 .container3{
@@ -249,13 +247,14 @@ bio,h1{
   justify-content: center;
   align-items: center;
   border: 3px solid green; 
+  
 }
 
 .conDiv13 ,.conDiv23{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 50px;
-  width: 50%;
+  padding: 50;
+  width: 50%;  
 }
 
