--- a/css/style.css
+++ b/css/style.css
@@ -1,169 +1,1 @@
-:root {
-  --primary: #183D3D;
-  --good: #c7ecee;
-}
-
-body{
-  margin: 0;
-  padding: 0;
-}
-
-nav{
-  background: var(--primary);
-  height: 80px;
-  width: 100%;
-}
-label.logo{
-  color: white;
-  font-weight: 35px;
-  line-height: 80px;
-  padding: 0 70px;
-  font-weight: bold;
-  font-size: 25px;
-}
-
-nav ul{
-  float: right;
-  margin-right: 20px;
-  line-height: 50px;
-}
-
-nav ul li{
-  display: inline-block;
-}
-
-nav ul li a{
-  color: white;
-  font-size: 15px;
-  padding: 7px 13px;
-  border-radius: 5px;
-  text-transform: uppercase;
-
-}
-
-a.active,a:hover{
-  background: var(--primary);
-  transition: .5s;
-  cursor: pointer;
-}
-
-#chack{
-  display: none;
-
-}
-
-/* ---------------------------------nav css----------------------------------- */
-
-#propic{
-  margin: 5em;
-  border-radius: 100%;
-  float: left;
-}
-.bio{
-  background-color: var(--good);
-}
-
-.bio,p{
-  line-height: 1.5em;
-  text-align: justify;
-  padding: 20px;
-}
-
-@media (max-width: 952px){
-  label.logo{
-    font-size: 20px;
-    padding-left: 50px;
-  }
-  nav ul li a{
-    font-size: 10px;
-  }
-}
-@media (max-width: 858px){
-  .chackbtn{
-    display: block;
-  }
-  ul{
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #040D12;
-    top: 80px;
-    left: 100%;
-    text-align: center;
-    transition: all .5s;
-  }
-  nav ul li{
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
-  }
-
-  nav ul li a{
-    font-size: 20px;
-  }
-  #chack:checked ~ ul{
-    left: 0;
-  }
-}
-
-.cardContainner{
-  width: 100%;
-  display: flex;
- 
-}
-.card{
-  background-color: #040D12;
-  margin: 5%;
-  color: white;
-  text-align: center;
-  border-radius: 20px;
-  
-}
-
-.card img{
-  padding: 10px;
-}
-#cardButton{
-  background-color: white;
-  color: black;
-  padding: 10px 20px;
-  margin:  20px 0;
-  border-radius: 10px 0;
-  font-weight: 900;
-}
-
-.secondContainer{
-  background-color: var(--primary);
-  color: white;
-
-}
-#table {
-  border-collapse: collapse;
-  margin: 5%;  
-}
-
-#table td, #table th {
-  border: 2px solid #000000;
-  padding: 10px;
-}
-#table th {
-  text-align: center;
-  background-color: var(--primary);
-  color: white;
-}
-.container3{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#footer{
-  background-color: #183D3D;
-  color: wheat;
-  text-align: center;
-}
-
-details{
-  padding: 10px;
-}
-
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
