--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Briem+Hand:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 body{
-  background-image: url("../img/background.jpg");
+  /* background-image: url("../img/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
+  background-attachment: fixed; */
+
 }
+
+
+
+
 
